@@ -36,4 +36,5 @@ struct pci_dev *pci_alloc_dev(struct pci_access *);
 int pci_link_dev(struct pci_access *, struct pci_dev *);
 
 extern struct pci_methods pm_intel_conf1, pm_intel_conf2, pm_linux_proc,
-  pm_fbsd_device, pm_aix_device, pm_nbsd_libpci, pm_dump, pm_linux_sysfs;
+	pm_fbsd_device, pm_aix_device, pm_nbsd_libpci, pm_obsd_device, 
+	pm_dump, pm_linux_sysfs;
